--- a/DesignerRHN/DesignerRHN-war/web/detalleconcepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/detalleconcepto.xhtml
@@ -82,7 +82,7 @@
                                 <p:tooltip  for="refrescar" value="#{msg['refrescar']}"/>
 
                                 <p:separator style="position: relative; top: -9px;"/>
-                                <p:commandButton id="salir" value="" actionListener="#{controlDetalleConcepto.salir()}" action="retornoConcepto" process="@this"
+                                <p:commandButton id="salir" value="" actionListener="#{controlDetalleConcepto.salir()}" action="#{controlDetalleConcepto.retornarPagina()}" process="@this"
                                                  style="background-image: url(Imagenes/Iconos/salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px;"/>  
                                 <p:tooltip  for="salir" value="#{msg['salir']}"/>
 
@@ -100,12 +100,12 @@
                         <fieldset  style="position: absolute; left: 10px; top: 105px; width: 832px; height: 375px; border-radius: 10px; text-align: left;">
                             <legend style="color: blue"><strong>#{msg['asignaciondecuentas']}</strong></legend>
 
-                            <p:scrollPanel id="scrollPrincipal" style="position: absolute; left: 3px; top: 15px; width:846px; height:360px; border: none" mode="native">  
+                            <p:scrollPanel id="scrollPrincipal" style="position: absolute; left: 3px; top: 15px; width: 846px; height:360px; border: none" mode="native">  
 
                                 <fieldset style="position: absolute; top: -2px; width: 805px; height: 167px; border-radius: 10px; text-align: left">
                                     <legend style="color: blue"><strong>#{msg['cuentasytipocc']}</strong></legend>
 
-                                    <p:dataTable id="datosVigenciaCuenta" widgetVar="datosVigenciaCuenta" var="infoVC" rowKey="#{infoVC.secuencia}" rowIndexVar="indiceVC" style="border: 1px; width: 1270px; font-size: 11px;"   
+                                    <p:dataTable id="datosVigenciaCuenta" widgetVar="datosVigenciaCuenta" var="infoVC" rowKey="#{infoVC.secuencia}" rowIndexVar="indiceVC" style="border: 1px; width: 1340px; font-size: 11px;"   
                                                  value="#{controlDetalleConcepto.listVigenciasCuentasConcepto}" scrollable="true" scrollHeight="#{controlDetalleConcepto.altoTablaVigenciaCuenta}" scrollWidth="805"
                                                  filteredValue="#{controlDetalleConcepto.filtrarListVigenciasCuentasConcepto}" emptyMessage="#{msg['vacio']}" selectionMode="single"
                                                  editable="true" editMode="cell" liveScroll="true" scrollRows="10" selection="#{controlDetalleConcepto.vigenciaCuentaSeleccionada}">
@@ -279,6 +279,24 @@
                                             </p:cellEditor>
                                             <f:facet name="footer">
                                                 <p:commandButton style="width: 190px; margin: -14px; height: 26px;  border: none; color: blue" action="centrocostodetalleconcepto" actionListener="#{controlBetaCentrosCostos.recibirPagina('atrascentrocostodetalleconcepto')}" id="fooccconsolidadador" value=""/>
+                                            </f:facet>
+                                        </p:column>
+
+                                        <p:column headerText="#{msg['proceso']}" sortBy="#{infoVC.proceso}" filterBy="#{infoVC.proceso}" filterMatchMode="contains" 
+                                                  id="vigenciaCuentaCCProceso" width="133" filterStyle="display: none; visibility: hidden" >                                  
+                                            <p:cellEditor>  
+                                                <f:facet name="output"><h:outputText value="#{infoVC.proceso}" style="text-transform: uppercase;"/></f:facet>  
+                                                <f:facet name="input">
+                                                    <p:inputText value="#{infoVC.proceso}" id="editarCCProceso" style="border-radius: 0px; width: 99%; text-transform: uppercase;"> 
+<!--                                                        <p:ajax event="select"  listener="#/{controlDetalleConcepto.cambiarIndiceVigenciaCuenta(infoVC, 8)}" />
+                                                        <p:ajax event="change" update="editarCCConsolidadorCVC" onstart="operacionEnProcesoLovs.show()" oncomplete="operacionEnProcesoLovs.hide()" listener="#/{controlDetalleConcepto.modificarVigenciaCuenta(infoVC,'CONSOLIDADORCREDITO',infoVC.consolidadorc.nombre)}" />
+                                                        <p:ajax event="dblclick" onstart="operacionEnProcesoLovs.show(); datosVigenciaGrupoConcepto.unselectAllRows(); datosVigenciaConceptoTT.unselectAllRows(); datosVigenciaConceptoTC.unselectAllRows(); datosVigenciaConceptoRL.unselectAllRows(); datosFormulaConcepto.unselectAllRows();"
+                                                                oncomplete="operacionEnProcesoLovs.hide()" listener="#/{controlDetalleConcepto.asignarIndex(6,0,0)}" />-->
+                                                    </p:inputText>
+                                                </f:facet>  
+                                            </p:cellEditor>
+                                            <f:facet name="footer">
+                                                <h:outputText value=""/>
                                             </f:facet>
                                         </p:column>
                                     </p:dataTable>
@@ -717,7 +735,7 @@
                         <p:commandButton style="position: absolute; left: 683px; top: 500px; height: 30px; width: 90px; background-image: url(Imagenes/Iconos/aceptar.png); 
                                          background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ACEPTAR" value="" disabled="#{controlDetalleConcepto.guardado}" onclick="confirmarGuardar.show();" update=":form:datosVigenciaCuenta"/>
                         <p:commandButton style="position: absolute; left: 773px; top: 500px; height: 30px; width: 90px; background-image: url(Imagenes/Iconos/cancelar.png); 
-                                         background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ATRAS" value="" actionListener="#{controlDetalleConcepto.salir()}" action="retornoConcepto"  />
+                                         background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ATRAS" value="" actionListener="#{controlDetalleConcepto.salir()}" action="#{controlDetalleConcepto.retornarPagina()}"  />
                     </p:panel>
 
                     <p:dialog id="seleccionarTablaNewReg" header="#{msg['nuevoregistro']}" widgetVar="seleccionarTablaNewReg" resizable="false" draggable="false" modal="true" height="270" width="360" closable="false">  
@@ -1029,6 +1047,42 @@
                                          actionListener="#{controlDetalleConcepto.actualizarCentroCostoCredito()}" process="@this"/>
                         <p:commandButton icon="ui-icon-arrowreturnthick-1-w" id="atrasCCC" style="position: relative; left: 130px; top: 15px;" value="#{msg['atras']}" 
                                          actionListener="#{controlDetalleConcepto.cancelarCambioCentroCostoCredito()}" process="@this"/>
+                    </p:dialog>
+
+                    <p:dialog header="#{msg['proceso']}" widgetVar="ProcesosDialogo" draggable="false" resizable="false" closable="false" 
+                              id="ProcesosDialogo" showEffect="fade" hideEffect="fade" width="431" modal="true" height="350">
+                        <p:dataTable id="lovProceso" widgetVar="lovProceso" style="width: 400px;" var="proceso" value="#{controlDetalleConcepto.lovProcesos}" rowKey="#{proceso.secuencia}"
+                                     selection="#{controlDetalleConcepto.procesoSeleccionadoLOV}" selectionMode="single" scrollable="true" scrollHeight="210" scrollWidth="416"
+                                     filteredValue="#{controlDetalleConcepto.filtrarlovProcesos}" emptyMessage="#{msg['lovvacio']}">              
+                            
+                            <p:ajax event="filter" listener="#{controlDetalleConcepto.contarRegistrosLovProcesos(1)}"/>
+                            <p:ajax event="rowSelect" listener="#{controlDetalleConcepto.activarAceptar()}" update=":form:aceptarCCC"/>
+                            <p:ajax event="rowDblselect" listener="#{controlDetalleConcepto.actualizarProceso()}"/>
+                            
+                            <f:facet name="header">  
+                                <h:outputText value="#{msg['buscarCCC']}" style="position: absolute; left: 27px; top: 14px;"/>  
+                                <p:inputText id="globalFilter" onkeyup="lovCentroCostoC.filter();" style="width: 160px; position: relative; left: 60px;" />  
+                            </f:facet>
+                            <p:column filterBy="#{proceso.codigo}"  filterMatchMode="contains" sortBy="#{proceso.codigo}" filterStyle="width: 85%;" width="70">
+                                <f:facet name="header">
+                                    <h:outputText value="#{msg['codigoCCC']}" />
+                                </f:facet>
+                                <h:outputText value="#{proceso.codigo}" />
+                            </p:column>
+                            <p:column filterBy="#{proceso.descripcion}" filterMatchMode="contains" sortBy="#{proceso.descripcion}" filterStyle="width: 85%;">
+                                <f:facet name="header">
+                                    <h:outputText value="#{msg['descripcion']}" />
+                                </f:facet>
+                                <h:outputText value="#{proceso.descripcion}" />
+                            </p:column>
+                        </p:dataTable>
+
+                        <h:outputText id="infoRegistroLovProcesos" value="#{msg['infoRegistro']} #{controlDetalleConcepto.infoRegistroLovProcesos}" style="position: relative; left: 10px; top: 5px; font-weight: bold;"/>
+
+                        <p:commandButton icon="ui-icon-check" id="aceptarPro" style="position: relative; left: 130px; top: 15px;" value="#{msg['aceptar']}" disabled="#{controlDetalleConcepto.aceptar}" 
+                                         actionListener="#{controlDetalleConcepto.actualizarProceso()}" process="@this"/>
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" id="atrasPro" style="position: relative; left: 130px; top: 15px;" value="#{msg['atras']}" 
+                                         actionListener="#{controlDetalleConcepto.cancelarCambioProceso()}" process="@this"/>
                     </p:dialog>
 
                     <p:dialog header="#{msg['gruposconceptosGC']}" widgetVar="GruposConceptosDialogo" draggable="false" resizable="false" closable="false" 
